# chimerautils

./: DIFFERENCES  LICENSE  README.md  TRADEOFFS  gen-patch.sh  import-src.sh  install-as.sh  meson.build  meson_options.txt  upstream.conf
include/: bitstring.h  bsdhash.h  capsicum_helpers.h  compat.h  err.h  libcasper.h  libutil.h  meson.build  regex.h  ripemd.h  signal.h  stdlib.h  string.h  time_bsd.h  unistd.h  utmpx.h  wchar.h
include/casper/: cap_fileargs.h  cap_net.h  cap_syslog.h
include/sys/: capsicum.h  cdefs.h  param.h  queue.h  stat.h
src/: meson.build
src.custom/: meson.build
src.custom/addpart/: addpart.c  meson.build
src.custom/arch/: arch.sh
src.custom/basenc/: basenc.c  meson.build
src.custom/ctrlaltdel/: ctrlaltdel.c  meson.build
src.custom/delpart/: delpart.c  meson.build
src.custom/dir/: dir.sh  meson.build
src.custom/fallocate/: fallocate.c  meson.build
src.custom/flock/: flock.1  flock.c  meson.build
src.custom/fsfreeze/: fsfreeze.c  meson.build
src.custom/hostid/: hostid.c  meson.build
src.custom/ionice/: ionice.c  meson.build
src.custom/isosize/: isosize.c  meson.build
src.custom/mcookie/: mcookie.c  meson.build
src.custom/md5sum/: md5sum.c  meson.build
src.custom/nproc/: meson.build  nproc.c
src.custom/pivot_root/: meson.build  pivot_root.c
src.custom/realpath/: meson.build  readlink.1  realpath.1  realpath.cc
src.custom/resizepart/: meson.build  resizepart.c
src.custom/setarch/: meson.build  setarch.c
src.custom/setsid/: meson.build  setsid.c
src.custom/switch_root/: meson.build  switch_root.c
src.custom/taskset/: meson.build  taskset.c
src.freebsd/: meson.build
src.freebsd/apply/: apply.c  meson.build
src.freebsd/awk/: FIXES  b.c  lib.c  main.c  meson.build  run.c
src.freebsd/bc/bc/: scan.l
src.freebsd/bc/dc/: bcode.c
src.freebsd/bintrans/: meson.build  qp.c  uudecode.c  uuencode.c
src.freebsd/compat/: merge.c  meson.build  mktemp.c  setmode.c  strftime.c  stringlist.c  strptime.c  unvis.c  vis.c
src.freebsd/compress/: compress.c  meson.build  zopen.c
src.freebsd/coreutils/: meson.build
src.freebsd/coreutils/cat/: cat.c
src.freebsd/coreutils/chmod/: chmod.1  chmod.c  meson.build
src.freebsd/coreutils/chown/: chgrp.1  chown.8  chown.c  meson.build
src.freebsd/coreutils/chroot/: chroot.8  chroot.c  meson.build
src.freebsd/coreutils/cksum/: meson.build
src.freebsd/coreutils/cp/: cp.1  cp.c  extern.h  meson.build  utils.c
src.freebsd/coreutils/csplit/: csplit.c  meson.build
src.freebsd/coreutils/cut/: cut.c  meson.build
src.freebsd/coreutils/date/: date.1  date.c  meson.build
src.freebsd/coreutils/dd/: args.c  dd.1  dd.c  dd.h  extern.h  misc.c  position.c
src.freebsd/coreutils/df/: df.1  df.c  meson.build
src.freebsd/coreutils/du/: du.1  du.c  meson.build
src.freebsd/coreutils/env/: env.1  env.c  envopts.c
src.freebsd/coreutils/expand/: expand.c
src.freebsd/coreutils/expr/: expr.y
src.freebsd/coreutils/factor/: factor.c
src.freebsd/coreutils/fmt/: fmt.c
src.freebsd/coreutils/fold/: fold.c
src.freebsd/dbcompat/: db.c  meson.build  mpool.c
src.freebsd/dbinclude/: db.h
src.freebsd/diffutils/: meson.build
src.freebsd/ed/: main.c  meson.build
src.freebsd/ee/: ee.c  meson.build
src.freebsd/fetch/: fetch.c  meson.build
src.freebsd/findutils/: meson.build
src.freebsd/gencat/: gencat.c  meson.build
src.freebsd/grep/: file.c  grep.c  grep.h  meson.build  util.c
src.freebsd/gzip/: gzip.c  meson.build  unxz.c  zuncompress.c
src.freebsd/include/: fts.h  rpmatch.h  stringlist.h
src.freebsd/jot/: jot.c  meson.build
src.freebsd/libfetch/: common.c  common.h  fetch.h  ftp.c  gen_errors.sh  http.c  meson.build
src.freebsd/libmp/: meson.build  mpasbn.c
src.freebsd/libstdbuf/: meson.build
src.freebsd/m4/: eval.c  extern.h  meson.build  misc.c  parser.c  parser.y
src.freebsd/miscutils/: meson.build
src.freebsd/netcat/: atomicio.c  atomicio.h  meson.build  nc.1  netcat.c  socks.c
src.freebsd/nproc/: meson.build
src.freebsd/nvi/: gen_ex_version_h.sh  gen_extern_h.sh  meson.build
src.freebsd/patch/: backupfile.c  inp.c  meson.build  patch.c  pch.c  util.c
src.freebsd/sed/: main.c  meson.build  process.c
src.freebsd/sh/: arith_yacc.c  cd.c  error.h  eval.c  exec.c  exec.h  expand.c  histedit.c  input.c  main.c  memalloc.h  meson.build  miscbltin.c  mkbuiltins  mknodes.c  mksyntax.c  mktokens  myhistedit.h  options.c  options.h  output.c  parser.c  redir.c  sh.1  trap.c  wrapper.sh
src.freebsd/shar/: meson.build
src.freebsd/su/: meson.build  su.1  su.c
src.freebsd/telnet/: meson.build
src.freebsd/tip/: getcap.c  getcap.h  meson.build  remote.5
src.freebsd/unvis/: meson.build  unvis.c
src.freebsd/util/: fts.3  fts.c  meson.build  rpmatch.3  rpmatch.c
src.freebsd/uudecode/: meson.build  uudecode.c
src.freebsd/uuencode/: meson.build  uuencode.c
src.freebsd/vis/: meson.build
src.freebsd/which/: meson.build
src.openbsd/diff3/: README.txt  diff3.in  diff3prog.c  meson.build
src/bc/: meson.build
src/cmp/: cmp.c  extern.h  meson.build  regular.c  special.c
src/col/: col.c  meson.build
src/colrm/: meson.build
src/coreutils/: meson.build
src/cp/: utils.c
src/diff/: diff.1  diff.c  diff.h  diffreg.c  meson.build
src/diff3/: diff3prog.c  gendiff3.sh  meson.build
src/du/: du.c
src/ed/: main.c  meson.build
src/extra/: meson.build
src/getopt/: getopt.c  meson.build
src/grep/: file.c  grep.c  grep.h  meson.build  util.c
src/gzip/: gzip.c  meson.build  unxz.c
src/look/: meson.build
src/ls/: ls.c
src/m4/: eval.c  look.c  meson.build
src/mesg/: meson.build
src/miscutils/: meson.build
src/patch/: backupfile.c  inp.c  patch.c  pch.c  strtonum.c
src/renice/: meson.build
src/rev/: rev.c
src/sdiff/: meson.build  sdiff.c
src/sed/: meson.build
src/sh/: alias.c  error.h  eval.c  exec.c  histedit.c  jobs.c  memalloc.h  meson.build  mkbuiltins  myhistedit.h  parser.c  trap.c  var.c
src/sort/: file.c
src/ul/: meson.build
src/wall/: meson.build
src/write/: meson.build  write.c
(+406 files in other folders)
