option('bc',
    type: 'boolean', value: false,
    description: 'Build classic FreeBSD bc/dc'
)

option('static_fts',
    type: 'boolean', value: false,
    description: 'Prefer static libfts'
)

option('static_rpmatch',
    type: 'boolean', value: false,
    description: 'Prefer static librpmatch'
)

option('fts_path',
    type: 'string', value: '',
    description: 'Extra search path for libfts'
)

option('rpmatch_path',
    type: 'string', value: '',
    description: 'Extra search path for librpmatch'
)

option('color_ls',
    type: 'boolean', value: true,
    description: 'Enable color ls(1) (needs terminfo)'
)

option('openssl',
    type: 'feature', value: 'enabled',
    description: 'Use OpenSSL (required by some tools, optional elsewhere)'
)

option('libedit',
    type: 'feature', value: 'enabled',
    description: 'Use libedit (needed by bc(1))'
)

option('zlib',
    type: 'feature', value: 'enabled',
    description: 'Use zlib for gzip(1)'
)

option('lzma',
    type: 'feature', value: 'enabled',
    description: 'Use liblzma for gzip(1)'
)

option('bzip2',
    type: 'feature', value: 'enabled',
    description: 'Use bzip2 for gzip(1)'
)

option('zstd',
    type: 'feature', value: 'enabled',
    description: 'Use zstd for gzip(1)'
)

option('tiny',
    type: 'feature', value: 'disabled',
    description: 'Also build tiny versions of some of the tools'
)
