subdir('basename')
subdir('cat')
subdir('chmod')
subdir('chown')
subdir('chroot')
subdir('cksum')
subdir('col')
subdir('colrm')
subdir('column')
subdir('comm')
subdir('cp')
subdir('csplit')
subdir('cut')
subdir('date')
subdir('dd')
subdir('df')
subdir('dirname')
subdir('du')
subdir('echo')
subdir('ed')
subdir('env')
subdir('expand')
subdir('expr')
subdir('factor')
subdir('false')
subdir('find')
subdir('fmt')
subdir('fold')
subdir('getopt')
subdir('grep')
subdir('head')
subdir('hexdump')
subdir('hostname')
subdir('id')
subdir('join')
subdir('kill')
subdir('ln')
subdir('logname')
subdir('look')
subdir('ls')
subdir('m4')
subdir('mesg')
subdir('mkdir')
subdir('mkfifo')
subdir('mknod')
subdir('mktemp')
subdir('mv')
subdir('nice')
subdir('nl')
subdir('nohup')
subdir('paste')
subdir('pathchk')
subdir('pr')
subdir('printenv')
subdir('printf')
subdir('pwd')
subdir('realpath')
subdir('renice')
subdir('rev')
subdir('rm')
subdir('rmdir')
subdir('seq')
subdir('sh')
subdir('sleep')
subdir('sort')
subdir('split')
subdir('stat')
subdir('stdbuf')
subdir('stty')
subdir('sync')
subdir('tail')
subdir('tee')
subdir('test')
subdir('timeout')
subdir('touch')
subdir('tr')
subdir('true')
subdir('truncate')
subdir('tsort')
subdir('tty')
subdir('uname')
subdir('unexpand')
subdir('uniq')
subdir('users')
subdir('wall')
subdir('wc')
subdir('which')
subdir('who')
subdir('write')
subdir('xargs')
subdir('yes')

if libedit.found()
    subdir('bc')
endif

if libcrypto.found()
    subdir('dc')
    subdir('xinstall')
endif

if libtinfo.found()
    subdir('ul')
endif
