subdir('calendar')
subdir('col')
subdir('colrm')
subdir('column')
subdir('getopt')
subdir('hexdump')
subdir('kill')
subdir('logger')
subdir('look')
subdir('mesg')
subdir('renice')
subdir('rev')
subdir('script')
subdir('wall')
subdir('write')

if libtinfo.found()
    subdir('ncal')
    subdir('ul')
endif
