subdir('calendar')
subdir('col')
subdir('colrm')
subdir('column')
subdir('getopt')
subdir('hexdump')
subdir('indent')
subdir('kill')
subdir('logger')
subdir('look')
subdir('mesg')
subdir('renice')
subdir('rev')
subdir('script')
subdir('time')
subdir('wall')
subdir('whereis')
subdir('write')

if tinfo.found()
    subdir('ncal')
    subdir('ul')
endif
